--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 # DB_URI= mongodb://localhost:27017/DIARY-Product
-
+CLOUDINARY_CLOUD_NAME=dvpk4sbzi
+CLOUDINARY_API_KEY=118823933719491
+CLOUDINARY_SECRET_KEY=hAKUmdWZSPS2hdoo_j6x-H2dBWs
 DB_URI = mongodb+srv://wtlmanasitambe:wtl_dairyproducts@parshuram.my8ne.mongodb.net/
 JWT_SECRET=your_jwt_secret_key
