--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "dairyuserbackend",
   "version": "0.0.0",
   "private": true,
-"scripts": {
-  "start": "node app.js",
-  "dev": "nodemon app.js"
-},
-
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
